# wspolbiezne

./: README.md  lock1.py  quickWW.py  threadingP.py  threadingPB.py
lab1/client/: client.cpp
lab1/messages/: data.json  result.json
lab1/server/: CMakeLists.txt  server.cpp
lab10/: zadanie.py
lab2/client/: 1_responseFile.txt  2_responseFile.txt  CMakeLists.txt  client  client.cpp
lab2/server/: server.cpp
lab3/server/: CMakeLists.txt  server.cpp
lab3/server/Files/: plikA.txt  plikB.txt
lab4/client/: CMakeLists.txt  client1  client2  main.cpp
lab4/server/: CMakeLists.txt  db.cpp  main.cpp  server
lab5/server/: CMakeLists.txt  client  client.c  server  server.c
lab6/gra/: CMakeLists.txt  gra  main.c
lab7/: client.py  server.py
lab8/: zad1.py  zad2.py
lab9/: pierwsze.py
